test/good/modules/use02.px

use math as m

print m.cos(0.0)
