test/bad/modules/use04.px

use math as m

print tan(0.0)
